Finished logic for updating receipt, fixed text alignment and adjusted routes

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -136,3 +136,7 @@ tbody:hover tr:hover a {
 table, th, td {
   border: 1px inset black;
 }
+
+td, th{
+    text-align: center;
+}
